@@ -25,6 +25,18 @@
 #include "seltree.h"
 #include "list.h"
 
+#define RESTRICTION_TYPE unsigned int
+#define RESTRICTION_FT_REG   (1U<<0) /* file */
+#define RESTRICTION_FT_DIR   (1U<<1) /* dir */
+#define RESTRICTION_FT_FIFO  (1U<<2) /* fifo */
+#define RESTRICTION_FT_LNK   (1U<<3) /* link */
+#define RESTRICTION_FT_BLK   (1U<<4) /* block device */
+#define RESTRICTION_FT_CHR   (1U<<5) /* char device */
+#define RESTRICTION_FT_SOCK  (1U<<6) /* socket */
+#define RESTRICTION_FT_DOOR  (1U<<7) /* door */
+#define RESTRICTION_FT_PORT  (1U<<8) /* port */
+#define RESTRICTION_NULL 0U
+
 /* DB_FOO are anded together to form rx_rule's attr */
 
 typedef struct rx_rule {
@@ -32,6 +44,7 @@ typedef struct rx_rule {
   pcre* crx; /* Compiled regexp */
   DB_ATTR_TYPE attr; /* Which attributes to save */
   long  conf_lineno; /* line no. of rule definition*/
+  RESTRICTION_TYPE restriction;
 } rx_rule;
 
 int compare_node_by_path(const void *n1, const void *n2);
