@@ -714,7 +714,7 @@ int do_ifxhost(int mode,char* name)
   return (handle_endif(doit,1));
 }
 
-list* append_rxlist(char* rx,DB_ATTR_TYPE attr,list* rxlst)
+list* append_rxlist(char* rx,DB_ATTR_TYPE attr,list* rxlst, RESTRICTION_TYPE restriction)
 {
   extern long conf_lineno; /* defined & set in conf_lex.l */
     
@@ -723,6 +723,7 @@ list* append_rxlist(char* rx,DB_ATTR_TYPE attr,list* rxlst)
   r->rx=rx;
   r->attr=attr;
   r->conf_lineno = conf_lineno;
+  r->restriction = restriction;
   if (attr&DB_CHECKINODE && attr&DB_CTIME)
     error(20,"Rule at line %li has c and I flags enabled at the same time. If same inode is found, flag c is ignored\n",conf_lineno);
   update_db_out_order(r->attr);
@@ -746,6 +747,19 @@ void do_groupdef(char* group,DB_ATTR_TYPE value)
   s->name=group;
   s->ival=value;
   conf->groupsyms=list_append(conf->groupsyms,(void*)s);
+}
+
+RESTRICTION_TYPE get_restrictionval(char* ch) {
+    if (strcmp(ch, "f") == 0) { return RESTRICTION_FT_REG; }
+    else if (strcmp(ch, "d") == 0) { return RESTRICTION_FT_DIR; }
+    else if (strcmp(ch, "p") == 0) { return RESTRICTION_FT_FIFO; }
+    else if (strcmp(ch, "l") == 0) { return RESTRICTION_FT_LNK; }
+    else if (strcmp(ch, "b") == 0) { return RESTRICTION_FT_BLK; }
+    else if (strcmp(ch, "c") == 0) { return RESTRICTION_FT_CHR; }
+    else if (strcmp(ch, "s") == 0) { return RESTRICTION_FT_SOCK; }
+    else if (strcmp(ch, "D") == 0) { return RESTRICTION_FT_DOOR; }
+    else if (strcmp(ch, "P") == 0) { return RESTRICTION_FT_PORT; }
+    else { return RESTRICTION_NULL; }
 }
 
 DB_ATTR_TYPE get_groupval(char* group)
