@@ -1,3 +1,6 @@
+2016-04-06 Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Support restricted selection lines
+
 2016-04-02 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Adjust file type letters
 
